--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
 
                 <section class="video">
-                    <iframe width="420" height="240" src="https://www.youtube.com/embed/3ZzSFd6Eer8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="420" height="240" src="https://www.youtube.com/embed/fokyS8KVC6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </section> 
 
                 <div class="container">
