Remoção de um erro

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </a>
 
                 <a href="https://www.instagram.com/ivamberg_/" target="_blank">
-                    <div class="instagram">/div> <img src="images/iconInstagram.svg" alt="Logo do instagram, usado para o usuário entrar em contato com o criador do site"></div>
+                    <div class="instagram"><img src="images/iconInstagram.svg" alt="Logo do instagram, usado para o usuário entrar em contato com o criador do site"></div>
                 </a>
             </section>
         </section>
